--- a/astro-view/Storyboards/Astronomy.storyboard
+++ b/astro-view/Storyboards/Astronomy.storyboard
@@ -15,9 +15,27 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zBo-JM-WVX">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="g5l-w7-DY7"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zBo-JM-WVX" secondAttribute="trailing" id="44Q-9c-MxR"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="zBo-JM-WVX" secondAttribute="bottom" id="CAK-Nk-3o9"/>
+                            <constraint firstItem="zBo-JM-WVX" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="CvK-O4-R5s"/>
+                            <constraint firstItem="zBo-JM-WVX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="GZ8-7x-Oqp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="zBo-JM-WVX" id="eOF-5n-bVr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
